--- a/protofolio.html
+++ b/protofolio.html
@@ -44,7 +44,7 @@
                 <h5></h5>
                 <br>
                 <div class="header-action-aria">
-                    <a href="cv.pdf" download class="btn btn-primary">Download CV</a>
+                    <a href="c:\Users\ashav\Downloads\Dnyaneshwari Vade (1).pdf" download class="btn btn-primary">Download CV</a>
                     <a href="" class="btn">Read more</a>
                 </div>
             </div>
